# VirtualZoo

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  TODO.txt  VirtualZoo.code-workspace  VirtualZoo.kdev4  c++_libraries.md  computer_consciousness.md  organism_design.md  pom.xml  rl_design.md  visibility_algorithm.md
.github/: copilot-instructions.md
.kdev4/: VirtualZoo.kdev4
src/: Line.cpp  Line.h  Point.cpp  Point.h  Projection.cpp  Projection.h  Rectangle.cpp  Rectangle.h  appconfig.cpp  appconfig.h  colour.h  constants.h  depth_pixel.h  location.cpp  location.h  locations.cpp  locations.h  organism.cpp  organism.h  organism_manager.cpp  organism_manager.h  sensor.cpp  sensor.h  sim_util.cpp  sim_util.h  simcore.cpp  stimulus.cpp  stimulus.h  tile.cpp  tile.h  visualize.cpp  visualize.h  visualize_gui.cpp  visualize_gui.h  world.cpp  world.h
src/main/java/de/strebel/: Organism.java  Viewer.java  VirtualZoo.java
src/test/java/de/strebel/: VirtualZooTest.java
src/worldmodel/: Line.cpp  Line.h  Point.h  Rectangle.cpp  Rectangle.h
test/: organismtest_test.cpp  world_test.cpp
